packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/index.svelte
<a href="/errors/endpoint-throws/page-endpoint-get-throws">Page endpoint get throws</a>